--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-llama-models/llama-2-7b-chat
+llama-models/llama-2-7b-chat*
+llama-models/tokenizer*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
